--- a/package.json
+++ b/package.json
@@ -10,14 +10,29 @@
     "Other"
   ],
   "activationEvents": [
-    "onCommand:cursor-placement.move"
+    "onCommand:cursor-placement.smart-move",
+    "onCommand:cursor-placement.pull-up",
+    "onCommand:cursor-placement.move-up-and-scroll",
+    "onCommand:cursor-placement.move-down-and-scroll"
   ],
   "main": "./out/extension.js",
   "contributes": {
     "commands": [
       {
-        "command": "cursor-placement.move",
-        "title": "Scroll To Cursor"
+        "command": "cursor-placement.smart-move",
+        "title": "Scroll to cursor"
+      },
+      {
+        "command": "cursor-placement.pull-up",
+        "title": "Pull cursor up"
+      },
+      {
+        "command": "cursor-placement.move-up-and-scroll",
+        "title": "Move up and scroll"
+      },
+      {
+        "command": "cursor-placement.move-down-and-scroll",
+        "title": "Move down and scroll"
       }
     ]
   },
