--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "activationEvents": [
     "onCommand:cursor-placement.smart-move",
     "onCommand:cursor-placement.pull-up",
+    "onCommand:cursor-placement.pull-down",
     "onCommand:cursor-placement.move-up-and-scroll",
     "onCommand:cursor-placement.move-down-and-scroll"
   ],
