--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "onCommand:cursor-placement.pull-down",
     "onCommand:cursor-placement.move-up-and-scroll",
     "onCommand:cursor-placement.move-down-and-scroll",
-    "onCommand:cursor-placement.escape-cursorMove"
+    "onCommand:cursor-placement.escape-cursorMove",
+    "onCommand:cursor-placement.move-selection-to-occurence"
   ],
   "main": "./out/extension.js",
   "contributes": {
@@ -42,6 +43,10 @@
       },
       {
         "command": "cursor-placement.escape-cursorMove",
+        "title": "Move cursor"
+      },
+      {
+        "command": "cursor-placement.move-selection-to-occurence",
         "title": "Move cursor"
       }
     ]
