--- a/package.json
+++ b/package.json
@@ -42,6 +42,10 @@
       {
         "command": "cursor-placement.move-selection-to-occurence",
         "title": "Move cursor"
+      },
+      {
+        "command": "cursor-placement.vim-escape-then-run",
+        "title": "Vim escape then run"
       }
     ]
   },
